--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -38,7 +38,7 @@ spec:
           echo "Cloning $REPOSITORY";
           cd /workspace && git clone -q -b $REVISION $REPOSITORY .;
     - name: pre-build-check
-      image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.2
+      image: iicr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.25
       env:
         - name: IBMCLOUD_API_KEY
           value: $(params.apikey)
@@ -59,7 +59,7 @@ spec:
           export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh";
           cd /workspace && source .tekton/scripts/pre-build-check.sh;
     - name: build-docker-image
-      image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.2
+      image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.25
       env:
         - name: IBMCLOUD_API_KEY
           value: $(params.apikey)
@@ -123,7 +123,7 @@ spec:
           echo "Cloning $REPOSITORY";
           cd /workspace && git clone -q -b $REVISION $REPOSITORY .;
     - name: check-vulnerabilities
-      image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.2
+      image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.25
       env:
         - name: IBMCLOUD_API_KEY
           value: $(params.apikey)
@@ -182,7 +182,7 @@ spec:
           echo "Cloning $REPOSITORY";
           cd /workspace && git clone -q -b $REVISION $REPOSITORY .;
     - name: pre-deploy-check
-      image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.2
+      image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.25
       env:
         - name: IBMCLOUD_API_KEY
           value: $(params.apikey)
@@ -210,7 +210,7 @@ spec:
           cp /artifacts/build.properties .;
           cd /workspace && source .tekton/scripts/pre-deploy-check.sh;
     - name: deploy-to-kubernetes
-      image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.2
+      image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.25
       env:
         - name: IBMCLOUD_API_KEY
           value: $(params.apikey)
