--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -13,7 +13,7 @@ spec:
       description: the ibmcloud api key
     - name: api
       description: the ibmcloud api endpoint
-      default: "https://cloud.ibm.com"
+      default: https://cloud.ibm.com
     - name: registryNamespace
       description: the ibmcloud registry namespace
     - name: imageName
