--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -62,7 +62,8 @@ spec:
           export NVM_DIR="$HOME/.nvm" && [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh";
           cd /workspace && source .tekton/scripts/pre-build-check.sh;
     - name: build-docker-image
-      image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.2
+      image: $(params.buildkit-image)
+      workingDir: $(workspaces.task-pvc.path)
       env:
         - name: IBMCLOUD_API_KEY
           value: $(params.apikey)
