--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -83,6 +83,42 @@ spec:
           value: "0"
         - name: GIT_BRANCH
           value: $(params.revision)
+        # specifying DOCKER_CONFIG is required to allow buildkit to detect docker credentials
+        - name: DOCKER_CONFIG
+          value: /steps
+        # CD execution context injection
+        - name: PIPELINE_RUN_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.labels['tekton.dev/pipelineRun']
+        - name: PIPELINE_RUN_ID
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.annotations['devops.cloud.ibm.com/tekton-pipeline']
+        - name: BUILD_NUMBER
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.annotations['devops.cloud.ibm.com/build-number']
+        - name: PIPELINE_ID
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.annotations['devops.cloud.ibm.com/pipeline-id']
+        - name: TRIGGER_TYPE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.annotations['devops.cloud.ibm.com/trigger-type']
+        - name: TRIGGER_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.annotations['devops.cloud.ibm.com/trigger-name']
+        - name: TRIGGERED_BY
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.annotations['devops.cloud.ibm.com/triggered-by']
+        - name: WORKSPACE_PATH
+          value: $(workspaces.source.path)
+      securityContext:
+        privileged: true
       command: ["/bin/bash", "-c"]
       args:
         - set -e -o pipefail;
