--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -131,7 +131,8 @@ spec:
       command: ["/bin/bash", "-c"]
       args:
         |
-        - BUILDKIT_IMAGE_NAMES=$(tr -s '\r\n' ',' < /steps/tags.lst | sed -e 's/,$/\n/')
+        - set -e
+          BUILDKIT_IMAGE_NAMES=$(tr -s '\r\n' ',' < /steps/tags.lst | sed -e 's/,$/\n/')
           if [ -z "$BUILDKIT_IMAGE_NAMES" ]; then
           # Set default image name for buildkit to push
             BUILDKIT_IMAGE_NAMES="$REGISTRY_URL/$REGISTRY_NAMESPACE/$IMAGE_NAME"
