--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -148,49 +148,6 @@ spec:
           export GIT_COMMIT=$(git rev-parse HEAD);
           export REGISTRY_URL=$(ibmcloud cr info | sed "2q;d" | awk '{for(i=1;i<=NF;i++) if ($i=="Registry") print $(i+1)}');
           cd /workspace && source .tekton/scripts/build-docker-image.sh;
-      volumeMounts:
-        - mountPath: /steps
-          name: steps-volume
-  sidecars:
-    - image: "moby/buildkit:v0.8.1"
-      name: server
-      securityContext:
-        privileged: true
-        # Use a workaround to by pass virtio-fs for Continuous Delivery shared workers
-      command: ["sh", "-c"]
-      args:
-        - if [[ $(df -PT /var/lib/buildkit | awk 'NR==2 {print $2}') == virtiofs ]]; then
-           apk add e2fsprogs &&
-           truncate -s 20G /tmp/disk.img &&
-           mkfs.ext4 /tmp/disk.img &&
-           mount /tmp/disk.img /var/lib/buildkit; fi && buildkitd --addr tcp://0.0.0.0:1234;
-      # Wait for the buildkit daemon to have available workers.
-  volumes:
-    - name: steps-volume
-      emptyDir: {}
----
-apiVersion: tekton.dev/v1beta1
-kind: Task
-metadata:
-  name: validate-task
-spec:
-  params:
-    - name: repository
-      description: the git repo
-    - name: revision
-      description: the revision
-      default: master
-    - name: apikey
-      description: the ibmcloud api key
-    - name: api
-      description: the ibmcloud api endpoint
-      default: "https://cloud.ibm.com"
-    - name: registryRegion
-      description: the ibmcloud registry region   
-  workspaces:
-  - name: task-pvc
-    mountPath: /artifacts         
-  steps:
     - name: clone-repo
       image: alpine/git
       env:
@@ -221,7 +178,80 @@ spec:
           while read line; do export $line; done < /artifacts/build.properties;
           cp /artifacts/build.properties .;
           cd /workspace && source .tekton/scripts/check-vulnerabilities.sh || true;
+      volumeMounts:
+        - mountPath: /steps
+          name: steps-volume
+  sidecars:
+    - image: "moby/buildkit:v0.8.1"
+      name: server
+      securityContext:
+        privileged: true
+        # Use a workaround to by pass virtio-fs for Continuous Delivery shared workers
+      command: ["sh", "-c"]
+      args:
+        - if [[ $(df -PT /var/lib/buildkit | awk 'NR==2 {print $2}') == virtiofs ]]; then
+           apk add e2fsprogs &&
+           truncate -s 20G /tmp/disk.img &&
+           mkfs.ext4 /tmp/disk.img &&
+           mount /tmp/disk.img /var/lib/buildkit; fi && buildkitd --addr tcp://0.0.0.0:1234;
+      # Wait for the buildkit daemon to have available workers.
+  volumes:
+    - name: steps-volume
+      emptyDir: {}
 ---
+# apiVersion: tekton.dev/v1beta1
+# kind: Task
+# metadata:
+#   name: validate-task
+# spec:
+#   params:
+#     - name: repository
+#       description: the git repo
+#     - name: revision
+#       description: the revision
+#       default: master
+#     - name: apikey
+#       description: the ibmcloud api key
+#     - name: api
+#       description: the ibmcloud api endpoint
+#       default: "https://cloud.ibm.com"
+#     - name: registryRegion
+#       description: the ibmcloud registry region   
+#   workspaces:
+#   - name: task-pvc
+#     mountPath: /artifacts         
+#   steps:
+#     - name: clone-repo
+#       image: alpine/git
+#       env:
+#         - name: REPOSITORY
+#           value: $(params.repository)
+#         - name: REVISION
+#           value: $(params.revision)
+#       command: ["/bin/sh", "-c"]
+#       args:
+#         - set -e -o pipefail;
+#           echo "Cloning $REPOSITORY";
+#           cd /workspace && git clone -q -b $REVISION $REPOSITORY .;
+#     - name: check-vulnerabilities
+#       image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.2
+#       env:
+#         - name: IBMCLOUD_API_KEY
+#           value: $(params.apikey)
+#         - name: API
+#           value: $(params.api)
+#         - name: HOME
+#           value: "/root"
+#         - name: REGION
+#           value: $(params.registryRegion)
+#       command: ["/bin/bash", "-c"]
+#       args:
+#         - set -e -o pipefail;
+#           ibmcloud login -a $API -r $REGION;
+#           while read line; do export $line; done < /artifacts/build.properties;
+#           cp /artifacts/build.properties .;
+#           cd /workspace && source .tekton/scripts/check-vulnerabilities.sh || true;
+# ---
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
