--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -289,8 +289,10 @@ spec:
           export IKS_BETA_VERSION=1;
           ibmcloud ks cluster config -c "${PIPELINE_KUBERNETES_CLUSTER_NAME}";
           if which oc > /dev/null && ibmcloud ks cluster get -c "${PIPELINE_KUBERNETES_CLUSTER_NAME}" --json | jq -e '.type=="openshift"' > /dev/null; then oc login -u apikey -p "${IBMCLOUD_API_KEY}" ; fi;
-          while read line; do export $line; done < /artifacts/build.properties;
-          cp /artifacts/build.properties .;
+          if [ -f /artifacts/build.properties ]; then
+            while read line; do export $line; done < /artifacts/build.properties;
+            cp /artifacts/build.properties .;
+          fi;
           cd /workspace && source .tekton/scripts/pre-deploy-check.sh;
     - name: deploy-to-kubernetes
       image: icr.io/continuous-delivery/pipeline/pipeline-base-ubi:3.2
