--- a/.tekton/task.yaml
+++ b/.tekton/task.yaml
@@ -318,7 +318,9 @@ spec:
           export IKS_BETA_VERSION=1;
           ibmcloud ks cluster config -c "${PIPELINE_KUBERNETES_CLUSTER_NAME}";
           if which oc > /dev/null && ibmcloud ks cluster get -c "${PIPELINE_KUBERNETES_CLUSTER_NAME}" --json | jq -e '.type=="openshift"' > /dev/null; then oc login -u apikey -p "${IBMCLOUD_API_KEY}" ; fi;
-          while read line; do export $line; done < /artifacts/build.properties;
-          cp /artifacts/build.properties .;
+          if [ -f /artifacts/build.properties ]; then
+            while read line; do export $line; done < /artifacts/build.properties;
+            cp /artifacts/build.properties .;
+          fi;
           cd /workspace && source .tekton/scripts/deploy-to-kubernetes.sh;
       
