--- a/deployment.yml
+++ b/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: angulist-app
-          image: us.icr.io/tekton-handson/angulist-app
+          image: us.icr.io/tekton-handson/angulist-app:1.0.0
           ports:
             - containerPort: 80
 ---
